k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-devops-interview
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: backend-devops-interview
  ports:
    - port: 80
      targetPort: 8000
